--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" href="css/bootstrap.min.css">
 	<link rel="stylesheet" href="css/animate.min.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css" integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p" crossorigin="anonymous"/>
   <link rel="stylesheet" href="css/component.css">
   <link rel="stylesheet" href="css/owl.theme.css">
 	<link rel="stylesheet" href="css/owl.carousel.css">
@@ -15,6 +16,8 @@
 	<link rel="stylesheet" href="css/style.css">
 	<!-- Fuentes de Google   -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+  <link rel="icon" href="/favicon.png" type="image/png">
+  <link rel="manifest" href="/manifest.json">
 	<title>PSST Soporte Técnico</title>
 </head>
 <body id="top" data-spy="scroll" data-offset="50" data-target=".navbar-collapse">
@@ -26,7 +29,7 @@
   <!-- Fin sección pre cargado -->
 
   <!-- Inicio sección de navegación  -->
-  <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+  <div class="navbar navbar-default navbar-default-b navbar-fixed-top" role="navigation">
     <div class="container">
       <div class="navbar-header">
         <button class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -56,7 +59,7 @@
         <div class="col-md-offset-1 col-md-10 col-sm-12 wow fadeInUp" data-wow-delay="0.3s">
           <h1 class="wow fadeInUp" data-wow-delay="0.6s">Sitio de apoyo técnico</h1>
           <p class="wow fadeInUp" data-wow-delay="0.9s">Bienvenido al sitio de soporte técnico de la plataforma web para la Presentación de Programas de Seguridad y Salud en el Trabajo <a target="_blank" href="https://psst.mintrabajo.gob.bo/Identity/Account/Login">PSST</a>.</p>
-          <a href="#docs" class="smoothScroll btn btn-success btn-lg wow fadeInUp" data-wow-delay="1.2s">Empecemos</a>
+          <div class="navbar-default-b"><a href="#docs" data-scroll class="smoothScroll btn btn-success btn-lg wow fadeInUp" data-wow-delay="1.2s">Empecemos</a></div>
         </div>
       </div>
     </div>
@@ -342,81 +345,51 @@
   <!-- Fin sección preguntas frecuentes -->
 
   <!-- Inicio sección pie de pagina -->
-  <!-- <footer>
+  <footer>
     <div class="container">
       <div class="row">
-        <div class="col-md-12 col-sm-12">
-          <ul class="social-icon"> 
-              <li><a href="#" class="fa fa-facebook wow fadeInUp" data-wow-delay="0.2s"></a></li>
-              <li><a href="#" class="fa fa-twitter wow fadeInUp" data-wow-delay="0.4s"></a></li>
-              <li><a href="#" class="fa fa-linkedin wow fadeInUp" data-wow-delay="0.6s"></a></li>
-              <li><a href="#" class="fa fa-instagram wow fadeInUp" data-wow-delay="0.8s"></a></li>
-              <li><a href="#" class="fa fa-google-plus wow fadeInUp" data-wow-delay="1.0s"></a></li>
-          </ul>
+        <div class="col-lg-4">
+          <div class="first-item">
+            <div class="logo">
+              <img src="images/logo-mteps2.png" alt="mteps" class="w-100">
+            </div>
+            <ul class="pa-0">
+              <li><a>Calle Yanacocha esquina Calle Mercado, Zona Central</a></li>
+              <li><a>La Paz - Bolivia</a></li>
+              <li><a>2408606</a></li>
+            </ul>
+          </div>
+        </div>
 
-          <p class="wow fadeInUp"  data-wow-delay="1s" >Copyright &copy; 2016 Snapshot Studio | 
-            Design: <a href="https://plus.google.com/+templatemo" title="free css templates" target="_blank">Templatemo</a></p>    
+        <div class="col-lg-4">
+          <h4>Soporte y contactos</h4>
+          <ul class="pa-0">
+            <li><a href="mailto:psst.soporte@mintrabajo.gob.bo?Subject=soporte%20manejo%20plataforma%20psst%20mintrabajo"><i class="fa fa-envelope"></i> psst.soporte@mintrabajo.gob.bo</a></li>
+            <li><a><i class="fa fa-phone"></i> 2408606 (Int. 2164)</a></li>
+            <li><a href="https://wa.me/59170000000" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a></li>
+            <li><a href="http://t.me/MinisterioDeTrabajo_bot" target="_blank"><i class="fab fa-telegram"></i> Telegram</a></li>
+          </ul>
+        </div>
+
+        <div class="col-lg-4">
+          <h4>Enlaces externos</h4>
+          <ul class="pa-0">
+            <li><a href="https://mintrabajo.gob.bo" target="_blank">Pagina oficial MTEPS</a></li>
+            <li><a href="https://ovt.mintrabajo.gob.bo" target="_blank">Pagina oficial OVT</a></li>
+            <li><a href="https://psst.mintrabajo.gob.bo" target="_blank">Pagina oficial PSST</a></li>
+            <li><a href="https://ovt.mintrabajo.gob.bo/soporte">Soporte OVT</a></li>
+          </ul>
+        </div>
+       
+        <div class="col-lg-12">
+          <div class="under-footer">
+            <p>Copyright © 2022 Ministerio de Trabajo Empleo y Prevision social. Todos los derechos reservados. 
+            <br>Diseño: <a href="https://mintrabajo.gob.bo" target="_blank" title="Ministerio de Trabajo">MTEPS</a></p>
+          </div>
         </div>
       </div>
     </div>
-  </footer> -->
-  <footer>
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-3">
-                <div class="first-item">
-                    <div class="logo">
-                        <img src="assets/images/white-logo.png" alt="hexashop ecommerce templatemo">
-                    </div>
-                    <ul>
-                        <li><a href="#">16501 Collins Ave, Sunny Isles Beach, FL 33160, United States</a></li>
-                        <li><a href="#">hexashop@company.com</a></li>
-                        <li><a href="#">010-020-0340</a></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="col-lg-3">
-                <h4>Shopping &amp; Categories</h4>
-                <ul>
-                    <li><a href="#">Men’s Shopping</a></li>
-                    <li><a href="#">Women’s Shopping</a></li>
-                    <li><a href="#">Kid's Shopping</a></li>
-                </ul>
-            </div>
-            <div class="col-lg-3">
-                <h4>Useful Links</h4>
-                <ul>
-                    <li><a href="#">Homepage</a></li>
-                    <li><a href="#">About Us</a></li>
-                    <li><a href="#">Help</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                </ul>
-            </div>
-            <div class="col-lg-3">
-                <h4>Help &amp; Information</h4>
-                <ul>
-                    <li><a href="#">Help</a></li>
-                    <li><a href="#">FAQ's</a></li>
-                    <li><a href="#">Shipping</a></li>
-                    <li><a href="#">Tracking ID</a></li>
-                </ul>
-            </div>
-            <div class="col-lg-12">
-                <div class="under-footer">
-                    <p>Copyright © 2022 HexaShop Co., Ltd. All Rights Reserved. 
-                    
-                    <br>Design: <a href="https://templatemo.com" target="_parent" title="free css templates">TemplateMo</a></p>
-                    <ul>
-                        <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li><a href="#"><i class="fa fa-behance"></i></a></li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-</footer>
+  </footer>
   <!-- Fin sección pie de pagina -->
 
   <!-- boton flotante ir arriba -->
