--- a/index.html
+++ b/index.html
@@ -251,16 +251,16 @@
           <h5>Acceso al sistema PSST</h5>
           <div class="home-video">
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe src="https://www.youtube.com/embed/lXl4J2HxW7s" frameborder="0" allowfullscreen></iframe>
+              <iframe src="https://www.youtube.com/embed/YZ8NqlvDKIE" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
         </div>
 
         <div class="col-md-6 col-sm-12">
-          <h5>Creación de un programa PSST</h5>
+          <h5>Sección empresa PSST</h5>
           <div class="home-video">
             <div class="embed-responsive embed-responsive-16by9">
-              <iframe src="https://www.youtube.com/embed/ii8a9cIiLj0" frameborder="0" allowfullscreen></iframe>
+              <iframe src="https://www.youtube.com/embed/dWBa32pIFQ8" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
         </div>
@@ -292,12 +292,12 @@
     <div class="container">
       <div class="row">
         <div class="col-md-offset-1 col-md-10 col-sm-12">
-          <div class="col-lg-offset-1 col-lg-10 section-title wow fadeInUp" data-wow-delay="0.4s">
+          <div class="col-lg-offset-1 col-lg-10 section-title wow fadeInUp" data-wow-delay="0.2s">
             <h1 class="preg">Preguntas frecuentes</h1>
             <p class="preg">Respuestas sobre las preguntas del sistema que se generan con más frecuencia.</p>
           </div>
 
-          <div class="col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.2s">
+          <div class="col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.4s">
             <div class="about-thumb">
               <h4>Pregunta</h4>
               <p>¿Cómo ingresar a la plataforma PSST?.</p>
@@ -312,7 +312,7 @@
             </div>
           </div>
 
-          <div class="col-md-12 col-sm-12 wow fadeInUp mg-1" data-wow-delay="0.2s">
+          <div class="col-md-12 col-sm-12 wow fadeInUp mg-1" data-wow-delay="0.6s">
             <div class="about-thumb">
               <h4>Pregunta</h4>
               <p>¿Como obtener el usuario y contraseña de ingreso al sistema PSST?</p>
@@ -324,7 +324,7 @@
             </div>
           </div>
 
-          <div class="col-md-12 col-sm-12 wow fadeInUp mg-1" data-wow-delay="0.2s">
+          <div class="col-md-12 col-sm-12 wow fadeInUp mg-1" data-wow-delay="0.8s">
             <div class="about-thumb">
               <h4>Pregunta</h4>
               <p>¿Cuáles son los costos de trámites para el PSST?</p>
@@ -335,6 +335,62 @@
                 •	51 a 100 trabajadores: 500 Bs.
                 •	101 a 200 trabajadores: 1.000 Bs.
                 •	Más de 200 trabajadores: 1.500 Bs.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-md-12 col-sm-12 wow fadeInUp mg-1" data-wow-delay="0.8s">
+            <div class="about-thumb">
+              <h4>Pregunta</h4>
+              <p>¿Cómo actualizar la información de Representante Legal en el sistema PSST?</p>
+              <h4 class="h4-right">Respuesta</h4>
+              <p class="p-right">
+                Para la actualización del representante legal lo primero que se debe realizar es la actualización de información en el Registro Obligatorio de Empleadores (ROE) de la Oficina Virtual de Trámites (OVT).
+                Posteriormente solicitar la actualización de la plataforma PSST a través del correo electrónico psst.soporte@mintrabajo.gob.bo 
+              </p>
+            </div>
+          </div>
+
+          <div class="col-md-12 col-sm-12 wow fadeInUp mg-1" data-wow-delay="0.8s">
+            <div class="about-thumb">
+              <h4>Pregunta</h4>
+              <p>Cómo verificar el pago CPT</p>
+              <h4 class="h4-right">Respuesta</h4>
+              <p class="p-right">
+                Debe solicitar la verificación a través del correo electrónico psst.soporte@mintrabajo.gob.bo  adjuntando la captura de la boleta de pago o depósito bancario y el código CPT generado con el cual realizaron el depósito.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-md-12 col-sm-12 wow fadeInUp mg-1" data-wow-delay="0.8s">
+            <div class="about-thumb">
+              <h4>Pregunta</h4>
+              <p>¿Cómo habilitar una o más sucursales en el sistema PSST?</p>
+              <h4 class="h4-right">Respuesta</h4>
+              <p class="p-right">
+                Para habilitar una o varias sucursales lo primero que debe realizar es el registro en FUNDEMPRESA luego realizar la actualización de datos del ROE en la plataforma OVT, finalmente solicitar la actualización de información a través del correo psst.soporte@mintrabajo.gob.bo, adjuntando el número de NIT.
+              </p>
+            </div>
+          </div>
+
+          <div class="col-md-12 col-sm-12 wow fadeInUp mg-1" data-wow-delay="0.8s">
+            <div class="about-thumb">
+              <h4>Pregunta</h4>
+              <p>¿Cómo actualizar o sincronizar una o más sucursales en el sistema PSST?</p>
+              <h4 class="h4-right">Respuesta</h4>
+              <p class="p-right">
+                Primero debe realizar la actualización en FUNDEMPRESA posteriormente en la OVT, una vez realizado el registro de sucursales, solicitar por medio del correo electrónico psst.soporte@mintrabajo.gob.bo
+              </p>
+            </div>
+          </div>
+
+          <div class="col-md-12 col-sm-12 wow fadeInUp mg-1" data-wow-delay="0.8s">
+            <div class="about-thumb">
+              <h4>Pregunta</h4>
+              <p>¿Cómo actualizar del número de trabajadores en el sistema PSST?</p>
+              <h4 class="h4-right">Respuesta</h4>
+              <p class="p-right">
+                Deberá realizar la actualización de datos por medio del ROE en la plataforma OVT, finalmente solicitar la actualización de información a través del correo psst.soporte@mintrabajo.gob.bo
               </p>
             </div>
           </div>
@@ -366,8 +422,8 @@
           <ul class="pa-0">
             <li><a href="mailto:psst.soporte@mintrabajo.gob.bo?Subject=soporte%20manejo%20plataforma%20psst%20mintrabajo"><i class="fa fa-envelope"></i> psst.soporte@mintrabajo.gob.bo</a></li>
             <li><a><i class="fa fa-phone"></i> 2408606 (Int. 2164)</a></li>
-            <li><a href="https://wa.me/59170000000" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a></li>
-            <li><a href="http://t.me/MinisterioDeTrabajo_bot" target="_blank"><i class="fab fa-telegram"></i> Telegram</a></li>
+            <li><a href="https://wa.me/59167349269" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a></li>
+            <li><a href="https://t.me/MinisterioTrabajo_bot" target="_blank"><i class="fab fa-telegram"></i> Telegram</a></li>
           </ul>
         </div>
 
