--- a/index.html
+++ b/index.html
@@ -83,24 +83,10 @@
               <img src="images/logo-card.jpeg" class="img-responsive-b" alt="">
             </div>
             <div class="media-body blog-info">
-              <small><i class="fa fa-clock-o"></i> 19 de Enero del 2022</small>
-              <h5>Manual de usuario para manejo PSST</h5>
-              <p>Pasos para el regisro y actualización de un proyecto PSST</p>
-              <a href="blog-detail.html" class="btn btn-success" style="cursor: pointer !important;">Descargar</a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-6 col-sm-6">
-          <div class="media blog-thumb">
-            <div class="media-object media-left">
-              <img src="images/logo-card.jpeg" class="img-responsive-b" alt="">
-            </div>
-            <div class="media-body blog-info">
               <small><i class="fa fa-clock-o"></i> 20 de Enero del 2022</small>
               <h5>Documento de preguntas frecuentes</h5>
               <p>Respuestas sobre el sistema que se generan con más frecuencia.</p>
-              <a href="blog-detail.html" class="btn btn-success" style="cursor: pointer !important;">Descargar</a>
+              <a href="docs/preguntas-frecuentes.pdf" target="_blank" class="btn btn-success" style="cursor: pointer !important;">Descargar</a>
             </div>
           </div>
         </div>
@@ -114,7 +100,21 @@
               <small><i class="fa fa-clock-o"></i> 19 de Enero del 2022</small>
               <h5>Manual de soporte técnico para el PSST</h5>
               <p>Guia de soporte técnico para el manejo de la plataforma PSST</p>
-              <a href="blog-detail.html" class="btn btn-success" style="cursor: pointer !important;">Descargar</a>
+              <a href="docs/preguntas-frecuentes.pdf" target="_blank" class="btn btn-success" style="cursor: pointer !important;">Descargar</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-6 col-sm-6">
+          <div class="media blog-thumb">
+            <div class="media-object media-left">
+              <img src="images/logo-card.jpeg" class="img-responsive-b" alt="">
+            </div>
+            <div class="media-body blog-info">
+              <small><i class="fa fa-clock-o"></i> 19 de Enero del 2022</small>
+              <h5>Manual de usuario para manejo PSST</h5>
+              <p>Pasos para el regisro y actualización de un proyecto PSST</p>
+              <a href="docs/manual-tecnico.pdf" target="_blank" class="btn btn-success" style="cursor: pointer !important;">Descargar</a>
             </div>
           </div>
         </div>
