--- a/index.html
+++ b/index.html
@@ -419,7 +419,7 @@
         <div class="col-md-offset-1 col-md-10 col-sm-12">
           <div class="col-lg-offset-1 col-lg-10 section-title wow fadeInUp" data-wow-delay="0.2s">
             <h1 class="preg text-center">Contactos</h1>
-            <p class="preg">Puedes recibir soporte personalizado en los siguientes apartados</p>
+            <p class="preg-c">Puedes recibir soporte personalizado en los siguientes apartados</p>
           </div>
 
           <div class="col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.2s">
