Soporte PSST - Version 1.0.0alpha

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
         <div class="col-md-offset-1 col-md-10 col-sm-12">
           <div class="col-lg-offset-1 col-lg-10 section-title wow fadeInUp" data-wow-delay="0.2s">
             <h1 class="preg">Preguntas frecuentes</h1>
-            <p class="preg">Respuestas sobre las preguntas del sistema que se generan con más frecuencia.</p>
+            <h3 class="text-dark-c">Respuestas sobre las preguntas del sistema que se generan con más frecuencia.</h3>
           </div>
 
           <div class="col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.2s">
@@ -422,7 +422,7 @@
         <div class="col-md-offset-1 col-md-10 col-sm-12">
           <div class="col-lg-offset-1 col-lg-10 section-title wow fadeInUp" data-wow-delay="0.2s">
             <h1 class="preg text-center">Contactos</h1>
-            <p class="preg-c">Puedes recibir soporte personalizado en los siguientes apartados</p>
+            <h3 class="text-dark-c">Puedes recibir soporte personalizado en los siguientes apartados</h3>
           </div>
 
           <div class="col-md-12 col-sm-12 wow fadeInUp" data-wow-delay="0.2s">
