--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 	<link rel="stylesheet" href="css/style.css"/>
 	<!-- Fuentes de Google   -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap" rel="stylesheet" />
+  <link rel="apple-touch-icon" sizes="144x144" href="images/144.png" />
   <link rel="icon" href="/favicon.png" type="image/png" />
   <link rel="manifest" href="manifest.json" type="application/manifest+json" />
 	<title>Soporte PSST</title>
